syntax = "proto3";

option csharp_namespace = "DbFake.SchemaReader.API.Services";

package Db;

service Schema {
  rpc GetDatabases(GetDatabasesRequest) returns (GetDatabasesReply);
  rpc GetDatabase(GetDatabaseRequest) returns (GetDatabaseReply);
}

message table {
  string name = 1;
  string schema = 2;
  repeated field fields = 3;
}

message database {
  string name = 1;
}

message field {
  string name = 1;
  string type = 2;
  oneof oneof_typeLength { int32 typeLength = 3; }
  oneof oneof_isNullable { bool isNullable = 4; }

}

message GetDatabasesRequest {
  string connectionString = 1;
}

message GetDatabasesReply {
  repeated database databases = 1;
}

message GetDatabaseRequest {
  string connectionString = 1;
  string database = 2;
}

message GetDatabaseReply {
  string database = 1;
  repeated table tables = 2;
}

